tests/fixtures/invalid/none_floordiv_set.py
# Cannot floor divide None and Set[int]
x: None = None // {1, 2, 3}
